y.output
State 99 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement
    3              | Statement

    4 Statement: DeclarationStmt NEWLINE
    5          | SimpleStmt NEWLINE
    6          | Block NEWLINE
    7          | IfStmt NEWLINE
    8          | ForStmt NEWLINE
    9          | PrintStmt NEWLINE
   10          | NEWLINE

   11 SimpleStmt: AssignmentStmt
   12           | ExpressionStmt

   13 DeclarationStmt: VAR IDENTIFIER TypeName '=' Expression
   14                | VAR IDENTIFIER ArrayType '=' Expression
   15                | VAR IDENTIFIER TypeName
   16                | VAR IDENTIFIER ArrayType

   17 AssignmentStmt: Expression AssignOp Expression

   18 AssignOp: '='
   19         | ADD_ASSIGN
   20         | SUB_ASSIGN
   21         | MUL_ASSIGN
   22         | QUO_ASSIGN
   23         | REM_ASSIGN

   24 ExpressionStmt: Expression

   25 $@1: %empty

   26 Block: '{' $@1 StatementList '}'

   27 IfStmt: IF Condition Block
   28       | IF Condition Block ELSE IfStmt
   29       | IF Condition Block ELSE Block

   30 Condition: Expression

   31 ForStmt: FOR Condition Block
   32        | FOR ForClause Block

   33 ForClause: InitStmt ';' Condition ';' PostStmt

   34 InitStmt: SimpleStmt

   35 PostStmt: SimpleStmt

   36 $@2: %empty

   37 PrintStmt: PRINT $@2 '(' Expression ')'

   38 $@3: %empty

   39 PrintStmt: PRINTLN $@3 '(' Expression ')'

   40 Type: TypeName
   41     | ArrayType

   42 TypeName: INT
   43         | FLOAT
   44         | STRING
   45         | BOOL

   46 ArrayType: '[' Expression ']' Type

   47 Expression: Expression LOROp Expression2
   48           | Expression2

   49 LOROp: LOR

   50 Expression2: Expression2 LANDOp Expression3
   51            | Expression3

   52 LANDOp: LAND

   53 Expression3: Expression3 CpOp Expression4
   54            | Expression4

   55 CpOp: '<'
   56     | '>'
   57     | LEQ
   58     | GEQ
   59     | EQL
   60     | NEQ

   61 Expression4: Expression4 AddOp Expression5
   62            | Expression5

   63 AddOp: '+'
   64      | '-'

   65 Expression5: Expression5 MulOp UnaryExpr
   66            | UnaryExpr

   67 MulOp: '*'
   68      | '/'
   69      | '%'

   70 UnaryExpr: PrimaryExpr
   71          | UnaryOp UnaryExpr
   72          | UnaryExpr IncDec

   73 IncDec: INC
   74       | DEC

   75 UnaryOp: '+'
   76        | '-'
   77        | '!'

   78 PrimaryExpr: Operand
   79            | IndexExpr
   80            | ConversionExpr

   81 Operand: Literal
   82        | IDENTIFIER
   83        | '(' Expression ')'

   84 Literal: INT_LIT
   85        | FLOAT_LIT
   86        | '"' STRING_LIT '"'
   87        | BOOL_LIT

   88 IndexExpr: PrimaryExpr '[' Expression ']'

   89 ConversionExpr: Type '(' Expression ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 77
'"' (34) 86
'%' (37) 69
'(' (40) 37 39 83 89
')' (41) 37 39 83 89
'*' (42) 67
'+' (43) 63 75
'-' (45) 64 76
'/' (47) 68
';' (59) 33
'<' (60) 55
'=' (61) 13 14 18
'>' (62) 56
'[' (91) 46 88
']' (93) 46 88
'{' (123) 26
'}' (125) 26
error (256)
ADD_ASSIGN (258) 19
SUB_ASSIGN (259) 20
MUL_ASSIGN (260) 21
QUO_ASSIGN (261) 22
REM_ASSIGN (262) 23
NEWLINE (263) 4 5 6 7 8 9 10
PRINT (264) 37
PRINTLN (265) 39
IF (266) 27 28 29
ELSE (267) 28 29
FOR (268) 31 32
INT_LIT (269) 84
FLOAT_LIT (270) 85
STRING_LIT (271) 86
BOOL_LIT (272) 87
IDENTIFIER (273) 13 14 15 16 82
VAR (274) 13 14 15 16
INC (275) 73
DEC (276) 74
GEQ (277) 58
LEQ (278) 57
EQL (279) 59
NEQ (280) 60
LAND (281) 52
LOR (282) 49
INT (283) 42
FLOAT (284) 43
BOOL (285) 45
STRING (286) 44


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Program (50)
    on left: 1, on right: 0
StatementList (51)
    on left: 2 3, on right: 1 2 26
Statement (52)
    on left: 4 5 6 7 8 9 10, on right: 2 3
SimpleStmt (53)
    on left: 11 12, on right: 5 34 35
DeclarationStmt (54)
    on left: 13 14 15 16, on right: 4
AssignmentStmt (55)
    on left: 17, on right: 11
AssignOp (56)
    on left: 18 19 20 21 22 23, on right: 17
ExpressionStmt (57)
    on left: 24, on right: 12
Block (58)
    on left: 26, on right: 6 27 28 29 31 32
$@1 (59)
    on left: 25, on right: 26
IfStmt (60)
    on left: 27 28 29, on right: 7 28
Condition (61)
    on left: 30, on right: 27 28 29 31 33
ForStmt (62)
    on left: 31 32, on right: 8
ForClause (63)
    on left: 33, on right: 32
InitStmt (64)
    on left: 34, on right: 33
PostStmt (65)
    on left: 35, on right: 33
PrintStmt (66)
    on left: 37 39, on right: 9
$@2 (67)
    on left: 36, on right: 37
$@3 (68)
    on left: 38, on right: 39
Type (69)
    on left: 40 41, on right: 46 89
TypeName (70)
    on left: 42 43 44 45, on right: 13 15 40
ArrayType (71)
    on left: 46, on right: 14 16 41
Expression (72)
    on left: 47 48, on right: 13 14 17 24 30 37 39 46 47 83 88 89
LOROp (73)
    on left: 49, on right: 47
Expression2 (74)
    on left: 50 51, on right: 47 48 50
LANDOp (75)
    on left: 52, on right: 50
Expression3 (76)
    on left: 53 54, on right: 50 51 53
CpOp (77)
    on left: 55 56 57 58 59 60, on right: 53
Expression4 (78)
    on left: 61 62, on right: 53 54 61
AddOp (79)
    on left: 63 64, on right: 61
Expression5 (80)
    on left: 65 66, on right: 61 62 65
MulOp (81)
    on left: 67 68 69, on right: 65
UnaryExpr (82)
    on left: 70 71 72, on right: 65 66 71 72
IncDec (83)
    on left: 73 74, on right: 72
UnaryOp (84)
    on left: 75 76 77, on right: 71
PrimaryExpr (85)
    on left: 78 79 80, on right: 70 88
Operand (86)
    on left: 81 82 83, on right: 78
Literal (87)
    on left: 84 85 86 87, on right: 81
IndexExpr (88)
    on left: 88, on right: 79
ConversionExpr (89)
    on left: 89, on right: 80


State 0

    0 $accept: . Program $end

    NEWLINE     shift, and go to state 1
    PRINT       shift, and go to state 2
    PRINTLN     shift, and go to state 3
    IF          shift, and go to state 4
    FOR         shift, and go to state 5
    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    VAR         shift, and go to state 10
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '{'         shift, and go to state 15
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    Program          go to state 22
    StatementList    go to state 23
    Statement        go to state 24
    SimpleStmt       go to state 25
    DeclarationStmt  go to state 26
    AssignmentStmt   go to state 27
    ExpressionStmt   go to state 28
    Block            go to state 29
    IfStmt           go to state 30
    ForStmt          go to state 31
    PrintStmt        go to state 32
    Type             go to state 33
    TypeName         go to state 34
    ArrayType        go to state 35
    Expression       go to state 36
    Expression2      go to state 37
    Expression3      go to state 38
    Expression4      go to state 39
    Expression5      go to state 40
    UnaryExpr        go to state 41
    UnaryOp          go to state 42
    PrimaryExpr      go to state 43
    Operand          go to state 44
    Literal          go to state 45
    IndexExpr        go to state 46
    ConversionExpr   go to state 47


State 1

   10 Statement: NEWLINE .

    $default  reduce using rule 10 (Statement)


State 2

   37 PrintStmt: PRINT . $@2 '(' Expression ')'

    $default  reduce using rule 36 ($@2)

    $@2  go to state 48


State 3

   39 PrintStmt: PRINTLN . $@3 '(' Expression ')'

    $default  reduce using rule 38 ($@3)

    $@3  go to state 49


State 4

   27 IfStmt: IF . Condition Block
   28       | IF . Condition Block ELSE IfStmt
   29       | IF . Condition Block ELSE Block

    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    Condition       go to state 50
    Type            go to state 33
    TypeName        go to state 34
    ArrayType       go to state 35
    Expression      go to state 51
    Expression2     go to state 37
    Expression3     go to state 38
    Expression4     go to state 39
    Expression5     go to state 40
    UnaryExpr       go to state 41
    UnaryOp         go to state 42
    PrimaryExpr     go to state 43
    Operand         go to state 44
    Literal         go to state 45
    IndexExpr       go to state 46
    ConversionExpr  go to state 47


State 5

   31 ForStmt: FOR . Condition Block
   32        | FOR . ForClause Block

    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    SimpleStmt      go to state 52
    AssignmentStmt  go to state 27
    ExpressionStmt  go to state 28
    Condition       go to state 53
    ForClause       go to state 54
    InitStmt        go to state 55
    Type            go to state 33
    TypeName        go to state 34
    ArrayType       go to state 35
    Expression      go to state 56
    Expression2     go to state 37
    Expression3     go to state 38
    Expression4     go to state 39
    Expression5     go to state 40
    UnaryExpr       go to state 41
    UnaryOp         go to state 42
    PrimaryExpr     go to state 43
    Operand         go to state 44
    Literal         go to state 45
    IndexExpr       go to state 46
    ConversionExpr  go to state 47


State 6

   84 Literal: INT_LIT .

    $default  reduce using rule 84 (Literal)


State 7

   85 Literal: FLOAT_LIT .

    $default  reduce using rule 85 (Literal)


State 8

   87 Literal: BOOL_LIT .

    $default  reduce using rule 87 (Literal)


State 9

   82 Operand: IDENTIFIER .

    $default  reduce using rule 82 (Operand)


State 10

   13 DeclarationStmt: VAR . IDENTIFIER TypeName '=' Expression
   14                | VAR . IDENTIFIER ArrayType '=' Expression
   15                | VAR . IDENTIFIER TypeName
   16                | VAR . IDENTIFIER ArrayType

    IDENTIFIER  shift, and go to state 57


State 11

   42 TypeName: INT .

    $default  reduce using rule 42 (TypeName)


State 12

   43 TypeName: FLOAT .

    $default  reduce using rule 43 (TypeName)


State 13

   45 TypeName: BOOL .

    $default  reduce using rule 45 (TypeName)


State 14

   44 TypeName: STRING .

    $default  reduce using rule 44 (TypeName)


State 15

   26 Block: '{' . $@1 StatementList '}'

    $default  reduce using rule 25 ($@1)

    $@1  go to state 58


State 16

   83 Operand: '(' . Expression ')'

    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    Type            go to state 33
    TypeName        go to state 34
    ArrayType       go to state 35
    Expression      go to state 59
    Expression2     go to state 37
    Expression3     go to state 38
    Expression4     go to state 39
    Expression5     go to state 40
    UnaryExpr       go to state 41
    UnaryOp         go to state 42
    PrimaryExpr     go to state 43
    Operand         go to state 44
    Literal         go to state 45
    IndexExpr       go to state 46
    ConversionExpr  go to state 47


State 17

   46 ArrayType: '[' . Expression ']' Type

    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    Type            go to state 33
    TypeName        go to state 34
    ArrayType       go to state 35
    Expression      go to state 60
    Expression2     go to state 37
    Expression3     go to state 38
    Expression4     go to state 39
    Expression5     go to state 40
    UnaryExpr       go to state 41
    UnaryOp         go to state 42
    PrimaryExpr     go to state 43
    Operand         go to state 44
    Literal         go to state 45
    IndexExpr       go to state 46
    ConversionExpr  go to state 47


State 18

   75 UnaryOp: '+' .

    $default  reduce using rule 75 (UnaryOp)


State 19

   76 UnaryOp: '-' .

    $default  reduce using rule 76 (UnaryOp)


State 20

   77 UnaryOp: '!' .

    $default  reduce using rule 77 (UnaryOp)


State 21

   86 Literal: '"' . STRING_LIT '"'

    STRING_LIT  shift, and go to state 61


State 22

    0 $accept: Program . $end

    $end  shift, and go to state 62


State 23

    1 Program: StatementList .
    2 StatementList: StatementList . Statement

    NEWLINE     shift, and go to state 1
    PRINT       shift, and go to state 2
    PRINTLN     shift, and go to state 3
    IF          shift, and go to state 4
    FOR         shift, and go to state 5
    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    VAR         shift, and go to state 10
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '{'         shift, and go to state 15
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    $default  reduce using rule 1 (Program)

    Statement        go to state 63
    SimpleStmt       go to state 25
    DeclarationStmt  go to state 26
    AssignmentStmt   go to state 27
    ExpressionStmt   go to state 28
    Block            go to state 29
    IfStmt           go to state 30
    ForStmt          go to state 31
    PrintStmt        go to state 32
    Type             go to state 33
    TypeName         go to state 34
    ArrayType        go to state 35
    Expression       go to state 36
    Expression2      go to state 37
    Expression3      go to state 38
    Expression4      go to state 39
    Expression5      go to state 40
    UnaryExpr        go to state 41
    UnaryOp          go to state 42
    PrimaryExpr      go to state 43
    Operand          go to state 44
    Literal          go to state 45
    IndexExpr        go to state 46
    ConversionExpr   go to state 47


State 24

    3 StatementList: Statement .

    $default  reduce using rule 3 (StatementList)


State 25

    5 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 64


State 26

    4 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 65


State 27

   11 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 11 (SimpleStmt)


State 28

   12 SimpleStmt: ExpressionStmt .

    $default  reduce using rule 12 (SimpleStmt)


State 29

    6 Statement: Block . NEWLINE

    NEWLINE  shift, and go to state 66


State 30

    7 Statement: IfStmt . NEWLINE

    NEWLINE  shift, and go to state 67


State 31

    8 Statement: ForStmt . NEWLINE

    NEWLINE  shift, and go to state 68


State 32

    9 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 69


State 33

   89 ConversionExpr: Type . '(' Expression ')'

    '('  shift, and go to state 70


State 34

   40 Type: TypeName .

    $default  reduce using rule 40 (Type)


State 35

   41 Type: ArrayType .

    $default  reduce using rule 41 (Type)


State 36

   17 AssignmentStmt: Expression . AssignOp Expression
   24 ExpressionStmt: Expression .
   47 Expression: Expression . LOROp Expression2

    ADD_ASSIGN  shift, and go to state 71
    SUB_ASSIGN  shift, and go to state 72
    MUL_ASSIGN  shift, and go to state 73
    QUO_ASSIGN  shift, and go to state 74
    REM_ASSIGN  shift, and go to state 75
    LOR         shift, and go to state 76
    '='         shift, and go to state 77

    $default  reduce using rule 24 (ExpressionStmt)

    AssignOp  go to state 78
    LOROp     go to state 79


State 37

   48 Expression: Expression2 .
   50 Expression2: Expression2 . LANDOp Expression3

    LAND  shift, and go to state 80

    $default  reduce using rule 48 (Expression)

    LANDOp  go to state 81


State 38

   51 Expression2: Expression3 .
   53 Expression3: Expression3 . CpOp Expression4

    GEQ  shift, and go to state 82
    LEQ  shift, and go to state 83
    EQL  shift, and go to state 84
    NEQ  shift, and go to state 85
    '<'  shift, and go to state 86
    '>'  shift, and go to state 87

    $default  reduce using rule 51 (Expression2)

    CpOp  go to state 88


State 39

   54 Expression3: Expression4 .
   61 Expression4: Expression4 . AddOp Expression5

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    $default  reduce using rule 54 (Expression3)

    AddOp  go to state 91


State 40

   62 Expression4: Expression5 .
   65 Expression5: Expression5 . MulOp UnaryExpr

    '*'  shift, and go to state 92
    '/'  shift, and go to state 93
    '%'  shift, and go to state 94

    $default  reduce using rule 62 (Expression4)

    MulOp  go to state 95


State 41

   66 Expression5: UnaryExpr .
   72 UnaryExpr: UnaryExpr . IncDec

    INC  shift, and go to state 96
    DEC  shift, and go to state 97

    $default  reduce using rule 66 (Expression5)

    IncDec  go to state 98


State 42

   71 UnaryExpr: UnaryOp . UnaryExpr

    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    Type            go to state 33
    TypeName        go to state 34
    ArrayType       go to state 35
    UnaryExpr       go to state 99
    UnaryOp         go to state 42
    PrimaryExpr     go to state 43
    Operand         go to state 44
    Literal         go to state 45
    IndexExpr       go to state 46
    ConversionExpr  go to state 47


State 43

   70 UnaryExpr: PrimaryExpr .
   88 IndexExpr: PrimaryExpr . '[' Expression ']'

    '['  shift, and go to state 100

    $default  reduce using rule 70 (UnaryExpr)


State 44

   78 PrimaryExpr: Operand .

    $default  reduce using rule 78 (PrimaryExpr)


State 45

   81 Operand: Literal .

    $default  reduce using rule 81 (Operand)


State 46

   79 PrimaryExpr: IndexExpr .

    $default  reduce using rule 79 (PrimaryExpr)


State 47

   80 PrimaryExpr: ConversionExpr .

    $default  reduce using rule 80 (PrimaryExpr)


State 48

   37 PrintStmt: PRINT $@2 . '(' Expression ')'

    '('  shift, and go to state 101


State 49

   39 PrintStmt: PRINTLN $@3 . '(' Expression ')'

    '('  shift, and go to state 102


State 50

   27 IfStmt: IF Condition . Block
   28       | IF Condition . Block ELSE IfStmt
   29       | IF Condition . Block ELSE Block

    '{'  shift, and go to state 15

    Block  go to state 103


State 51

   30 Condition: Expression .
   47 Expression: Expression . LOROp Expression2

    LOR  shift, and go to state 76

    $default  reduce using rule 30 (Condition)

    LOROp  go to state 79


State 52

   34 InitStmt: SimpleStmt .

    $default  reduce using rule 34 (InitStmt)


State 53

   31 ForStmt: FOR Condition . Block

    '{'  shift, and go to state 15

    Block  go to state 104


State 54

   32 ForStmt: FOR ForClause . Block

    '{'  shift, and go to state 15

    Block  go to state 105


State 55

   33 ForClause: InitStmt . ';' Condition ';' PostStmt

    ';'  shift, and go to state 106


State 56

   17 AssignmentStmt: Expression . AssignOp Expression
   24 ExpressionStmt: Expression .
   30 Condition: Expression .
   47 Expression: Expression . LOROp Expression2

    ADD_ASSIGN  shift, and go to state 71
    SUB_ASSIGN  shift, and go to state 72
    MUL_ASSIGN  shift, and go to state 73
    QUO_ASSIGN  shift, and go to state 74
    REM_ASSIGN  shift, and go to state 75
    LOR         shift, and go to state 76
    '='         shift, and go to state 77

    '{'       reduce using rule 30 (Condition)
    $default  reduce using rule 24 (ExpressionStmt)

    AssignOp  go to state 78
    LOROp     go to state 79


State 57

   13 DeclarationStmt: VAR IDENTIFIER . TypeName '=' Expression
   14                | VAR IDENTIFIER . ArrayType '=' Expression
   15                | VAR IDENTIFIER . TypeName
   16                | VAR IDENTIFIER . ArrayType

    INT     shift, and go to state 11
    FLOAT   shift, and go to state 12
    BOOL    shift, and go to state 13
    STRING  shift, and go to state 14
    '['     shift, and go to state 17

    TypeName   go to state 107
    ArrayType  go to state 108


State 58

   26 Block: '{' $@1 . StatementList '}'

    NEWLINE     shift, and go to state 1
    PRINT       shift, and go to state 2
    PRINTLN     shift, and go to state 3
    IF          shift, and go to state 4
    FOR         shift, and go to state 5
    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    VAR         shift, and go to state 10
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '{'         shift, and go to state 15
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    StatementList    go to state 109
    Statement        go to state 24
    SimpleStmt       go to state 25
    DeclarationStmt  go to state 26
    AssignmentStmt   go to state 27
    ExpressionStmt   go to state 28
    Block            go to state 29
    IfStmt           go to state 30
    ForStmt          go to state 31
    PrintStmt        go to state 32
    Type             go to state 33
    TypeName         go to state 34
    ArrayType        go to state 35
    Expression       go to state 36
    Expression2      go to state 37
    Expression3      go to state 38
    Expression4      go to state 39
    Expression5      go to state 40
    UnaryExpr        go to state 41
    UnaryOp          go to state 42
    PrimaryExpr      go to state 43
    Operand          go to state 44
    Literal          go to state 45
    IndexExpr        go to state 46
    ConversionExpr   go to state 47


State 59

   47 Expression: Expression . LOROp Expression2
   83 Operand: '(' Expression . ')'

    LOR  shift, and go to state 76
    ')'  shift, and go to state 110

    LOROp  go to state 79


State 60

   46 ArrayType: '[' Expression . ']' Type
   47 Expression: Expression . LOROp Expression2

    LOR  shift, and go to state 76
    ']'  shift, and go to state 111

    LOROp  go to state 79


State 61

   86 Literal: '"' STRING_LIT . '"'

    '"'  shift, and go to state 112


State 62

    0 $accept: Program $end .

    $default  accept


State 63

    2 StatementList: StatementList Statement .

    $default  reduce using rule 2 (StatementList)


State 64

    5 Statement: SimpleStmt NEWLINE .

    $default  reduce using rule 5 (Statement)


State 65

    4 Statement: DeclarationStmt NEWLINE .

    $default  reduce using rule 4 (Statement)


State 66

    6 Statement: Block NEWLINE .

    $default  reduce using rule 6 (Statement)


State 67

    7 Statement: IfStmt NEWLINE .

    $default  reduce using rule 7 (Statement)


State 68

    8 Statement: ForStmt NEWLINE .

    $default  reduce using rule 8 (Statement)


State 69

    9 Statement: PrintStmt NEWLINE .

    $default  reduce using rule 9 (Statement)


State 70

   89 ConversionExpr: Type '(' . Expression ')'

    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    Type            go to state 33
    TypeName        go to state 34
    ArrayType       go to state 35
    Expression      go to state 113
    Expression2     go to state 37
    Expression3     go to state 38
    Expression4     go to state 39
    Expression5     go to state 40
    UnaryExpr       go to state 41
    UnaryOp         go to state 42
    PrimaryExpr     go to state 43
    Operand         go to state 44
    Literal         go to state 45
    IndexExpr       go to state 46
    ConversionExpr  go to state 47


State 71

   19 AssignOp: ADD_ASSIGN .

    $default  reduce using rule 19 (AssignOp)


State 72

   20 AssignOp: SUB_ASSIGN .

    $default  reduce using rule 20 (AssignOp)


State 73

   21 AssignOp: MUL_ASSIGN .

    $default  reduce using rule 21 (AssignOp)


State 74

   22 AssignOp: QUO_ASSIGN .

    $default  reduce using rule 22 (AssignOp)


State 75

   23 AssignOp: REM_ASSIGN .

    $default  reduce using rule 23 (AssignOp)


State 76

   49 LOROp: LOR .

    $default  reduce using rule 49 (LOROp)


State 77

   18 AssignOp: '=' .

    $default  reduce using rule 18 (AssignOp)


State 78

   17 AssignmentStmt: Expression AssignOp . Expression

    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    Type            go to state 33
    TypeName        go to state 34
    ArrayType       go to state 35
    Expression      go to state 114
    Expression2     go to state 37
    Expression3     go to state 38
    Expression4     go to state 39
    Expression5     go to state 40
    UnaryExpr       go to state 41
    UnaryOp         go to state 42
    PrimaryExpr     go to state 43
    Operand         go to state 44
    Literal         go to state 45
    IndexExpr       go to state 46
    ConversionExpr  go to state 47


State 79

   47 Expression: Expression LOROp . Expression2

    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    Type            go to state 33
    TypeName        go to state 34
    ArrayType       go to state 35
    Expression2     go to state 115
    Expression3     go to state 38
    Expression4     go to state 39
    Expression5     go to state 40
    UnaryExpr       go to state 41
    UnaryOp         go to state 42
    PrimaryExpr     go to state 43
    Operand         go to state 44
    Literal         go to state 45
    IndexExpr       go to state 46
    ConversionExpr  go to state 47


State 80

   52 LANDOp: LAND .

    $default  reduce using rule 52 (LANDOp)


State 81

   50 Expression2: Expression2 LANDOp . Expression3

    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    Type            go to state 33
    TypeName        go to state 34
    ArrayType       go to state 35
    Expression3     go to state 116
    Expression4     go to state 39
    Expression5     go to state 40
    UnaryExpr       go to state 41
    UnaryOp         go to state 42
    PrimaryExpr     go to state 43
    Operand         go to state 44
    Literal         go to state 45
    IndexExpr       go to state 46
    ConversionExpr  go to state 47


State 82

   58 CpOp: GEQ .

    $default  reduce using rule 58 (CpOp)


State 83

   57 CpOp: LEQ .

    $default  reduce using rule 57 (CpOp)


State 84

   59 CpOp: EQL .

    $default  reduce using rule 59 (CpOp)


State 85

   60 CpOp: NEQ .

    $default  reduce using rule 60 (CpOp)


State 86

   55 CpOp: '<' .

    $default  reduce using rule 55 (CpOp)


State 87

   56 CpOp: '>' .

    $default  reduce using rule 56 (CpOp)


State 88

   53 Expression3: Expression3 CpOp . Expression4

    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    Type            go to state 33
    TypeName        go to state 34
    ArrayType       go to state 35
    Expression4     go to state 117
    Expression5     go to state 40
    UnaryExpr       go to state 41
    UnaryOp         go to state 42
    PrimaryExpr     go to state 43
    Operand         go to state 44
    Literal         go to state 45
    IndexExpr       go to state 46
    ConversionExpr  go to state 47


State 89

   63 AddOp: '+' .

    $default  reduce using rule 63 (AddOp)


State 90

   64 AddOp: '-' .

    $default  reduce using rule 64 (AddOp)


State 91

   61 Expression4: Expression4 AddOp . Expression5

    INT_LIT     shift, and go to state 6
    FLOAT_LIT   shift, and go to state 7
    BOOL_LIT    shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    INT         shift, and go to state 11
    FLOAT       shift, and go to state 12
    BOOL        shift, and go to state 13
    STRING      shift, and go to state 14
    '('         shift, and go to state 16
    '['         shift, and go to state 17
    '+'         shift, and go to state 18
    '-'         shift, and go to state 19
    '!'         shift, and go to state 20
    '"'         shift, and go to state 21

    Type            go to state 33
    TypeName        go to state 34
    ArrayType       go to state 35
    Expression5     go to state 118
    UnaryExpr       go to state 41
    UnaryOp         go to state 42
    PrimaryExpr     go to state 43
    Operand         go to state 44
    Literal         go to state 45
    IndexExpr       go to state 46
    ConversionExpr  go to state 47


State 92

   67 MulOp: '*' .

    $default  reduce using rule 67 (MulOp)


State 93

   68 MulOp: '/' .

    $default  reduce using rule 68 (MulOp)


State 94

   69 MulOp: '%' .

    $default  reduce using rule 69 (MulOp)


State 95

   65 Expression5: Expression5 MulOp . UnaryExpr
